feat: build example

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -c ./webpack/webpack.config.js",
+    "build:t": "webpack -c ./webpack/webpack.config.transition.js",
+    "build:k": "webpack -c ./webpack/webpack.config.keep-alive.js",
     "dev": "webpack serve -c ./webpack/webpack.config.dev.js"
   },
   "repository": {
@@ -42,10 +44,13 @@
     "npm": "^8.5.4",
     "postcss-loader": "^3.0.0",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^4.2.3",
     "vue-loader": "^14.2.4",
     "vue-template-compiler": "^2.6.10",
     "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+    "webpack-merge": "^5.8.0"
   }
 }
